se agrego modifi

--- a/juego_invaders.html
+++ b/juego_invaders.html
@@ -12,8 +12,8 @@ h1{
 	text-align:center;
 }
 #miCanvas{
-	border:dotted 2px yellow;
-	background:black;	
+	border:dotted 2px rgb(189, 189, 157);
+	background:rgb(215, 156, 156);	
 }
 </style>
 <script>
