--- a/index.html
+++ b/index.html
@@ -11,13 +11,29 @@
             max-width: 800px;
             margin: 20px auto;
             padding: 20px;
-            background-color: #f9f9f9;
+            background-color: #5ce0d3; /* Fondo celeste */
+            background-image: url('flowers.jpg'); /* Imagen de fondo con flores */
+            background-size: cover;
+            background-repeat: repeat;
+            animation: moveBackground 20s linear infinite; /* Animación de movimiento del fondo */
         }
+        
+        @keyframes moveBackground {
+            from {
+                background-position: 0 0; /* Posición inicial del fondo */
+            }
+            to {
+                background-position: 100% 100%; /* Posición final del fondo */
+            }
+        }
+
         h1 {
             text-align: center;
             color: #333;
             text-shadow: 1px 1px 2px rgba(0,0,0,0.3);
             margin-bottom: 30px;
+            font-family: 'Sacramento', cursive; /* Fuente Sacramento */
+            font-size: 3rem; /* Tamaño grande para el título */
         }
         ul {
             list-style-type: none;
@@ -25,23 +41,26 @@
             margin: 0;
         }
         li {
-            margin-bottom: 20px;
+            margin-bottom: 30px; /* Aumentado el espacio entre elementos */
             background-color: #fff;
-            padding: 15px;
-            border-radius: 10px;
-            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
-            transition: all 0.3s ease;
+            padding: 20px;
+            border-radius: 15px; /* Bordes más redondeados */
+            box-shadow: 0 4px 8px rgba(0,0,0,0.2); /* Sombra más pronunciada */
+            transition: transform 0.3s ease, box-shadow 0.3s ease;
             display: flex;
             align-items: center;
         }
         li:hover {
-            transform: translateY(-3px);
-            box-shadow: 0 4px 6px rgba(0,0,0,0.1);
+            transform: translateY(-5px); /* Efecto de levantamiento al hacer hover */
+            box-shadow: 0 6px 12px rgba(0,0,0,0.3); /* Sombra más intensa al hacer hover */
         }
         .game-icon {
-            width: 50px;
-            height: 50px;
-            margin-right: 15px;
+            width: 100px; /* Aumentado el tamaño de las imágenes */
+            height: 100px; /* Aumentado el tamaño de las imágenes */
+            margin-right: 25px;
+            border-radius: 50%; /* Imágenes redondas */
+            object-fit: cover; /* Ajuste de la imagen */
+            box-shadow: 0 2px 4px rgba(0,0,0,0.1); /* Sombra suave */
         }
         a {
             text-decoration: none;
@@ -51,44 +70,46 @@
             transition: background-color 0.3s ease, color 0.3s ease;
             display: flex;
             align-items: center;
-            padding: 10px;
-            border-radius: 8px;
+            padding: 15px;
+            border-radius: 12px; /* Bordes más redondeados */
+            background-color: #e0f3ff; /* Color de fondo celeste */
         }
         a:hover {
-            background-color: #3366cc;
-            color: #fff;
+            background-color: #0e8eef; /* Cambio de color de fondo al hacer hover */
+            color: #fff; /* Cambio de color de texto al hacer hover */
         }
     </style>
+    <link href="https://fonts.googleapis.com/css2?family=Sacramento&display=swap" rel="stylesheet">
 </head>
 <body>
     <h1>Índice de Juegos</h1>
     <ul>
         <li>
-            <img src="tanque-icon.png" alt="Icono de Juego de Tanque" class="game-icon">
+            <img src="tanq.jpeg" alt="Icono de Juego de Tanque" class="game-icon">
             <a href="juego_tanque.html">Juego de Tanque</a>
         </li>
         <li>
-            <img src="invaders-icon.png" alt="Icono de Juego de Invaders" class="game-icon">
+            <img src="invaders.jpeg" alt="Icono de Juego de Invaders" class="game-icon">
             <a href="juego_invaders.html">Juego de Invaders</a>
         </li>
         <li>
-            <img src="rompecabezas-icon.png" alt="Icono de Juego de Rompecabezas" class="game-icon">
+            <img src="rompecabezas.jpeg" alt="Icono de Juego de Rompecabezas" class="game-icon">
             <a href="juego_rompecabezas.html">Juego de Rompecabezas</a>
         </li>
         <li>
-            <img src="minas-icon.png" alt="Icono de Juego de Minas" class="game-icon">
+            <img src="minas.png" alt="Icono de Juego de Minas" class="game-icon">
             <a href="juego_minas.html">Juego de Minas</a>
         </li>
         <li>
-            <img src="memoria-icon.png" alt="Icono de Juego de Memoria" class="game-icon">
+            <img src="memoria.jpeg" alt="Icono de Juego de Memoria" class="game-icon">
             <a href="juego_memoria.html">Juego de Memoria</a>
         </li>
         <li>
-            <img src="tictactoe-icon.png" alt="Icono de Juego de Tic Tac Toe" class="game-icon">
-            <a href="juego_tictactoe.html">Juego de Tic Tac Toe</a>
+            <img src="tictac.jpeg" alt="Icono de Juego de Tic Tac Toe" class="game-icon">
+            <a href="juegotictactoe.html">Juego de Tic Tac Toe</a>
         </li>
         <li>
-            <img src="ahorcado-icon.png" alt="Icono de Juego del Ahorcado" class="game-icon">
+            <img src="ahorcado.png" alt="Icono de Juego del Ahorcado" class="game-icon">
             <a href="juego_ahorcado.html">Juego del Ahorcado</a>
         </li>
     </ul>
